--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,7 +25,7 @@
       <img src="assets/jet_pal_logo.png" alt="JetPal" width="200px"> 
       <h1 class="project-name">{{ site.title | default: page.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://qualtricsxmklgttw9z8.qualtrics.com/jfe/form/SV_bvbLpJgvHFGAI4u" class="btn">Take the Survey</a>
+      <button onclick="formbricks.track('start_survey')" class="btn">Take the Survey</button>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
