--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,6 +33,8 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      <img src="assets/screenshots.png" alt="App Screenshots"/>
+
       {{ content }}
 
       <footer class="site-footer">
